--- a/스파르타 과제/1. 숫자 맞추기 게임.md
+++ b/스파르타 과제/1. 숫자 맞추기 게임.md
@@ -7,6 +7,7 @@
 
 </aside>
 
+
 ### **과제  내용**
 
 1. 플레이어와 컴퓨터가 참여하는 숫자 맞추기 게임을 만드세요. 
@@ -39,8 +40,10 @@ import random
 ```
 
 <aside>
-🔥
 
+    
+    
+🔥
 ### 1. 숫자 맞추기 게임 (선택)
 
 ### **추가 도전 과제**
@@ -75,3 +78,63 @@ import random
     ```
     
 </aside>
+
+
+## 문제 해결방안
+
+### 1. **사용자 입력값 검증**
+- **문제**: 사용자가 1~10 범위 외의 숫자나 숫자가 아닌 값을 입력할 가능성이 있음.
+- **해결 방안**:
+  - `try-except`를 사용해 숫자가 아닌 입력(`ValueError`)을 처리.
+  - 입력값이 1~10 사이인지 조건문(`if 1 <= user_number <= 10`)으로 확인하고, 범위를 벗어난 경우 오류 메시지를 출력하며 다시 입력받음.
+
+---
+
+### 2. **게임 반복 로직 (플로우 제어)**
+- **문제**: 게임이 한 번 끝난 후 사용자가 계속 게임을 진행할지 선택하게 해야 함.
+- **해결 방안**:
+  - 무한 루프(`while True`)를 사용해 사용자가 명시적으로 종료 의사를 밝히기 전까지 반복.
+  - `Y`와 `N`만 유효한 입력으로 허용하며, 그 외 입력에는 적절한 메시지를 출력.
+
+---
+
+### 3. **정답 추측 반복 로직**
+- **문제**: 사용자가 정답을 맞출 때까지 입력을 계속 받아야 함.
+- **해결 방안**:
+  - 정답과 입력값이 다를 경우(`while user_number != chosen_number`), 입력값이 정답보다 큰지 작은지에 따라 힌트를 제공.
+  - 정답을 맞출 때까지 다시 입력받도록 루프 유지.
+
+---
+
+### 4. **무작위 숫자 생성**
+- **문제**: 매번 새로운 숫자를 생성해 게임의 재미를 보장해야 함.
+- **해결 방안**:
+  - `random.randint(1, 10)`을 사용해 1과 10 사이의 난수를 생성.
+  - 정답 숫자는 매번 게임을 시작할 때 새로 선택.
+
+---
+
+### 5. **명확하고 사용자 친화적인 피드백 제공**
+- **문제**: 잘못된 입력이나 범위를 벗어난 값을 입력했을 때 사용자에게 무엇이 잘못되었는지 알려야 함.
+- **해결 방안**:
+  - 유효하지 않은 입력에 대해 `"유효하지 않은 숫자입니다. 숫자를 입력해주세요."`라는 메시지를 제공.
+  - 숫자가 범위를 벗어난 경우 `"입력값이 1과 10 사이가 아닙니다. 다시 입력하세요."`라는 메시지를 출력.
+
+---
+
+### 6. **코드 구조화 및 가독성**
+- **문제**: 복잡한 로직을 단순하게 유지하고 가독성을 확보해야 함.
+- **해결 방안**:
+  - 각 기능을 별도의 `while` 루프로 분리하여 각 루프가 하나의 목적에만 집중하도록 설계.
+  - 적절한 주석을 추가해 코드의 흐름과 목적을 쉽게 이해할 수 있도록 설명.
+
+---
+
+### 7. **대소문자 구분 없이 입력 처리**
+- **문제**: 사용자가 대소문자를 혼용해 입력할 가능성이 있음.
+- **해결 방안**:
+  - 입력을 받을 때 `.upper()` 메서드를 사용해 모두 대문자로 변환, 입력의 일관성을 확보.
+
+---
+
+이 코드는 위와 같은 문제 해결 방안을 통해 사용자 친화적이고 견고한 숫자 맞추기 게임을 구현했습니다. 🙂
