--- a/스파르타 과제/1. 숫자 맞추기 게임.md
+++ b/스파르타 과제/1. 숫자 맞추기 게임.md
@@ -40,12 +40,10 @@ import random
 ```
 
 <aside>
-
-    
-    
+<br><br>   
 🔥
-### 1. 숫자 맞추기 게임 (선택)
 
+### 1. 숫자 맞추기 게임 (선택)
 ### **추가 도전 과제**
 
 1. 플레이어가 입력한 숫자가 범위를 벗어날 경우, 적절한 안내 메시지를 출력하여 유효한 범위 내의 숫자를 입력하도록 유도하세요.
@@ -79,7 +77,7 @@ import random
     
 </aside>
 
-
+<br><br>
 ## 문제 해결방안
 
 ### 1. **사용자 입력값 검증**
@@ -137,4 +135,5 @@ import random
 
 ---
 
-이 코드는 위와 같은 문제 해결 방안을 통해 사용자 친화적이고 견고한 숫자 맞추기 게임을 구현했습니다. 🙂
+위와 같은 문제 해결 방안을 통해 숫자 맞추기 게임을 구현했습니다. 
+읽어주셔서 감사합니다.☺️
