Update 3. Python 라이브러리로 데이터 분석하기.md

--- a/스파르타 과제/3. Python 라이브러리로 데이터 분석하기.md
+++ b/스파르타 과제/3. Python 라이브러리로 데이터 분석하기.md
@@ -24,7 +24,7 @@
 1. 다운로드 한 데이터 파일(.xlxs)을 열고 어떤 데이터인지 먼저 파악합니다.
 2. 과제 수행에 필요한 Python 라이브러리를 불러옵니다.
 3. Quiz를 수행합니다.
-
+<br><br>
 ### **Quiz**
 
 <aside>
@@ -174,8 +174,9 @@
 
 
 <aside>
-🔥
 
+<br><br>
+🔥
 ### 3. Python 라이브러리로 데이터 분석하기 (선택)
 
 ### 추가 도전 과제
@@ -201,3 +202,98 @@
     ```
     
 </aside>
+
+<br><br>
+## 문제 해결방안
+#### 1. **데이터 로드**
+- **문제**: Excel 및 CSV 파일에서 데이터를 로드해야 함.
+- **해결 방안**:
+  - `pandas.read_excel()` 및 `pandas.read_csv()`를 사용하여 데이터를 불러옴.
+  - 데이터를 Pandas DataFrame으로 변환하여 데이터 분석 작업에 활용.
+
+---
+
+#### 2. **경찰서와 구별 매핑**
+- **문제**: 경찰서 이름으로부터 해당 구를 식별해야 함.
+- **해결 방안**:
+  - `dict` 자료형(`police_gu`)을 생성하여 경찰서 이름과 구를 매핑.
+  - `DataFrame.map()`을 사용하여 매핑된 구 이름을 새로운 컬럼(`구별`)에 추가.
+  - `fillna()`를 사용해 매핑되지 않은 경우 기본값(`구 없음`)으로 처리.
+
+---
+
+#### 3. **피벗 테이블 생성**
+- **문제**: 구별로 집계된 데이터를 생성해야 함.
+- **해결 방안**:
+  - `pandas.pivot_table()`을 사용하여 구별로 데이터를 집계.
+  - 발생 및 검거 컬럼을 선택하여 합계(`aggfunc='sum'`) 계산.
+
+---
+
+#### 4. **데이터 정제**
+- **문제**: 매핑되지 않은 데이터를 제거해야 함.
+- **해결 방안**:
+  - `DataFrame.drop()`을 사용해 `구 없음` 행을 제거.
+
+---
+
+#### 5. **검거율 계산**
+- **문제**: 각 범죄별 및 전체 검거율을 계산해야 함.
+- **해결 방안**:
+  - 각 범죄별 검거율: `(검거 수 / 발생 수) * 100`로 계산.
+  - 전체 검거율: `(소계 검거 / 소계 발생) * 100`으로 계산.
+  - 새로운 컬럼으로 계산된 값을 추가.
+
+---
+
+#### 6. **불필요한 컬럼 삭제**
+- **문제**: 분석에 필요 없는 컬럼을 제거해야 함.
+- **해결 방안**:
+  - `del` 명령어를 사용하여 검거와 발생 관련 중복 데이터를 제거.
+
+---
+
+#### 7. **컬럼 이름 변경**
+- **문제**: 컬럼 이름이 분석 목적에 맞게 명확하지 않음.
+- **해결 방안**:
+  - `DataFrame.rename()`을 사용하여 컬럼 이름을 간결하게 변경.
+    - 예: `'강간(발생)'` → `'강간'`
+
+---
+
+#### 8. **인구 데이터 병합**
+- **문제**: 구별 인구 데이터를 기존 데이터와 결합해야 함.
+- **해결 방안**:
+  - `DataFrame.set_index()`를 사용하여 CSV 파일에서 가져온 데이터를 `구별` 기준으로 정리.
+  - `DataFrame.join()`을 통해 기존 데이터와 병합.
+
+---
+
+#### 9. **데이터 정렬**
+- **문제**: 검거율을 기준으로 데이터를 정렬해야 함.
+- **해결 방안**:
+  - `DataFrame.sort_values()`를 사용하여 `검거율` 기준으로 오름차순 정렬.
+
+---
+
+#### 10. **최종 데이터 출력**
+- **문제**: 데이터 정리 및 시각화를 위한 준비 완료.
+- **해결 방안**:
+  - 병합된 최종 DataFrame(`df_merged`) 출력.
+  - 추가적인 분석 또는 시각화에 적합한 형태로 데이터 제공. 
+
+---
+
+### 사용된 주요 기술
+- **데이터 로드**: `read_excel`, `read_csv`
+- **매핑 및 결측치 처리**: `map`, `fillna`
+- **피벗 테이블**: `pivot_table`
+- **데이터 정제**: `drop`, `del`
+- **수치 계산**: 수식 연산 및 컬럼 생성
+- **컬럼 이름 변경**: `rename`
+- **데이터 병합**: `join`
+- **데이터 정렬**: `sort_values`
+
+---
+
+위와 같은 기술로 데이터 분석을 해보았습니다.☺️
