--- a/스파르타 과제/1. 숫자 맞추기 게임/과제설명 및 문제해결.md
+++ b/스파르타 과제/1. 숫자 맞추기 게임/과제설명 및 문제해결.md
@@ -99,7 +99,7 @@ import random
 ### 3. **정답 추측 반복 로직**
 - **문제**: 사용자가 정답을 맞출 때까지 입력을 계속 받아야 함.
 - **해결 방안**:
-  - 정답과 입력값이 다를 경우(`while user_number != chosen_number`), 입력값이 정답보다 큰지 작은지에 따라 힌트를 제공.
+  - 정답과 입력값이 다를 경우, 입력값이 정답보다 큰지 작은지에 따라 힌트를 제공.
   - 정답을 맞출 때까지 다시 입력받도록 루프 유지.
 
 ---
@@ -134,6 +134,13 @@ import random
   - 입력을 받을 때 `.upper()` 메서드를 사용해 모두 대문자로 변환, 입력의 일관성을 확보.
 
 ---
-
+### **추가 변경사항**
+- **문제**: 직전 코드에서 앞의 루프를 탈출하고 다시 해당 오답을 기재하면 다음 루프로 그냥 넘어가는 오류가 발생했다.
+- 예를들면 1<=사용자입력<=10 루프를 사용자가 5를 입력해서 통과해버리면,
+- 다시 입력하는 과정에서 11을 입력해도 정답보다 값이 크다는 메세지만 나올뿐 1<=사용자입력<=10 제한이 사라져버리는 문제점이 있었다.
+- **해결 방안**:
+  - 무한루프 하나를 제거하고 하나의 무한반복루프 안에서 해당 기능이 작동하도록 수정하였다. 
+---
+<br><br>
 위와 같은 문제 해결 방안을 통해 숫자 맞추기 게임을 구현했습니다. 
 읽어주셔서 감사합니다.☺️
